--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <script src="scripts/datastore.js" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
   </body>
 </html>
