--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>coffeerun</title>
   </head>
   <body>
-    <script src="scripts/datastore.js" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts/datastore.js" charset="utf-8"></script>
     <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts/main.js" charset="utf-8"></script>
   </body>
 </html>
