Added Form Handler

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
   <script type="text/javascript" charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/bootstrap-slider.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/css/bootstrap-slider.min.css">
   <link rel="stylesheet" href="stylesheets/main.css">
@@ -46,6 +47,12 @@
               Grande
             </label>
           </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="size" value="grandisimo">
+                Grandisimo
+              </label>
+          </div>
           <div class="form-group">
             <label for="flavorShot">Flavor Shot</label>
             <select class="form-control" name="flavor" id="flavorShot">
@@ -65,6 +72,7 @@
       </div>
     </div>
   </section>
+  <script type="text/javascript" src="scripts/formhandler.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/datastore.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/main.js" charset="utf-8"></script>
