--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
       </div>
     </div>
   </section>
+
+  <!-- Modal -->
+<div class="modal fade" id="achievement" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Congratulations!</h4>
+      </div>
+      <div class="modal-body">
+        You unlocked an achievement! Thanks to your monster appetite for caffeine, you now have access to secret ordering options. Do you want to use this power?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default no" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-default yes" data-dismiss="modal">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"> </script>
   <script type="text/javascript" src="scripts/formhandler.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/datastore.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
