--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           <div class="form-group">
             <label for="strengthLevel">Caffeine Rating</label>
             <input type="range" name="strength" id="strengthLevel" value="5" data-slider-id="ex1Slider" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="5">
+
           </div>
           <div class="special-options">
             <label>Special Options</label>
@@ -103,6 +104,13 @@
         </form>
       </div>
     </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h4>Pending Orders:</h4>
+        <div data-coffee-order="checklist">
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Modal -->
@@ -125,6 +133,7 @@
     </div>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="scripts/checklist.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/formhandler.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/datastore.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
