AJAX server response

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="modal-body">
           <h1>Congratulations!</h1>
-          <h5><em>Thanks to your love for caffeine, you now have access to secret ordering options. Do you want to use them?</em></h5>
+          <h5><em>Your love for caffeine has gained you access to secret ordering options. Do you want to use them?</em></h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger no" data-dismiss="modal">No</button>
@@ -136,6 +136,7 @@
   <script type="text/javascript" src="scripts/validation.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/checklist.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/formhandler.js" charset="utf-8"></script>
+  <script type="text/javascript" src="scripts/remotedatastore.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/datastore.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/truck.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/main.js" charset="utf-8"></script>
